# Hello_app

./: README.md
combined/: .env  Dockerfile  docker-compose.yml  pyproject.toml
combined/app/: main.py
combined/data/: classifications.db  documentsearch_Dfn0XuM1WQWx.proplengths.bak  schema.db
combined/data/documentsearch_Dfn0XuM1WQWx.hnsw.commitlog.d/: 1705659328
combined/data/documentsearch_Dfn0XuM1WQWx_lsm/objects/: segment-1705661304970088365.bloom  segment-1705661304970088365.cna  segment-1705661304970088365.db  segment-1705661304970088365.secondary.0.bloom
combined/data/documentsearch_Dfn0XuM1WQWx_lsm/property__id/: segment-1705661305182179264.bloom  segment-1705661305182179264.db
combined/data/documentsearch_Dfn0XuM1WQWx_lsm/property_source_text/: segment-1705661305312345229.bloom  segment-1705661305312345229.db
combined/data/documentsearch_Dfn0XuM1WQWx_lsm/property_source_text_searchable/: segment-1705661305379916199.bloom  segment-1705661305379916199.db
postgre/: Dockerfile  docker-compose.yml  pyproject.toml
postgre/app/: postgre.py
