[tool.poetry]
name = "postgreHello"
version = "0.1.0"
description = ""
authors = ["sujji"]
license = "MIT"



[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
python-multipart = "^0.0.5"
pydantic = "^1.8.2"
psycopg2= "2.9.9"
aiopg= "1.3.5"




[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
